--- a/accessibilite/index_fr.html
+++ b/accessibilite/index_fr.html
@@ -104,18 +104,33 @@
         <div class="col" tabindex="0">
           <div id="intro">
             <h1>Introduction</h1>
-            <span>Lors de la rentrée scolaire 2021, c’est 400 000 enfants en situation de handicap qui ont fait leur rentrée dans les établissements scolaires ordinaires du premier et second degré (de la maternelle au lycée). En 2019, 37 502 étudiants en situation de handicape ont été recensés, soit 1,69 % de la population étudiante. Ces chiffres augmentent continuellement, une évolution encourageante pour l’avenir. En effet, il est toujours compliqué pour une personne en situation de handicap de suivre une scolarité classique dû au manque d'infrastructure et de moyen les aidant à être autonome. C’est pourquoi peu d’entre eux continuent leurs études après l'enseignement secondaire. Afin que tout le monde ait sa chance, il est impératif de tout mettre en œuvre pour rendre la scolarité totalement accessible, et cela passe beaucoup par le numérique.
+            <span>Lors de la rentrée scolaire 2021, c’est 400 000 enfants en situation de handicap qui ont fait leur
+              rentrée dans les établissements scolaires ordinaires du premier et second degré (de la maternelle au
+              lycée). En 2019, 37 502 étudiants en situation de handicape ont été recensés, soit 1,69 % de la population
+              étudiante. Ces chiffres augmentent continuellement, une évolution encourageante pour l’avenir. En effet,
+              il est toujours compliqué pour une personne en situation de handicap de suivre une scolarité classique dû
+              au manque d'infrastructure et de moyen les aidant à être autonome. C’est pourquoi peu d’entre eux
+              continuent leurs études après l'enseignement secondaire. Afin que tout le monde ait sa chance, il est
+              impératif de tout mettre en œuvre pour rendre la scolarité totalement accessible, et cela passe beaucoup
+              par le numérique.
             </span>
             <div id="img">
               <img class="img-responsive" src="assets/cned.png" alt="
             Enfant étudiant à distance à l'aide d'un ordinateur">
             </div>
 
-            De nos jours, beaucoup de choses se font sur ordinateur : les inscriptions, l'accès aux cours, aux relevés de notes etc, phénomène en grande expansion depuis la crise du COVID-19. Avec les cours à distance, il suffit qu’un seul site WEB ou logiciel utilisé ne soit pas accessible pour pénaliser toute la scolarité d’un élève en situation de handicap. 
-            Il existe de nombreux outils déjà peu connus d’aides aux personnes en situation de handicap afin d’utiliser les outils numériques, mais il existe aussi des outils spécialisés dans l’éducation. En effet, il peut être compliqué pour un élève souffrant d’handicap auditif ou visuel de suivre un cours comme les autres. Avec les progrès de la technologie, il semble évident que celle-ci peut être utilisée afin que chacun puisse suivre le cours sans préjudice.
-            
-            <br/>
-            <br/>
+            De nos jours, beaucoup de choses se font sur ordinateur : les inscriptions, l'accès aux cours, aux relevés
+            de notes etc, phénomène en grande expansion depuis la crise du COVID-19. Avec les cours à distance, il
+            suffit qu’un seul site WEB ou logiciel utilisé ne soit pas accessible pour pénaliser toute la scolarité d’un
+            élève en situation de handicap.
+            Il existe de nombreux outils déjà peu connus d’aides aux personnes en situation de handicap afin d’utiliser
+            les outils numériques, mais il existe aussi des outils spécialisés dans l’éducation. En effet, il peut être
+            compliqué pour un élève souffrant d’handicap auditif ou visuel de suivre un cours comme les autres. Avec les
+            progrès de la technologie, il semble évident que celle-ci peut être utilisée afin que chacun puisse suivre
+            le cours sans préjudice.
+
+            <br />
+            <br />
             <div id="use-case">
               <h1>Contenu vidéo</h1>
               <div>Voici une vidéo tournée à Narbonne durant une journée un peu spéciale : journée de sensibilisation
