--- a/accessibilite/index_fr.html
+++ b/accessibilite/index_fr.html
@@ -77,16 +77,14 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/image_edu1.jpeg" class="d-block w-100"
-              alt="Première diapositive d'image d'un casque à l'aide de la réalité virtuelle">
+            <img src="assets/image_edu1.jpeg" class="d-block w-100" alt="Première diapositive">
           </div>
           <div class="carousel-item">
             <img src="assets/image_edu2.jpeg" class="d-block w-100" alt="
-                Deuxième diapositive d'image d'un enfant jouant avec la réalité virtuelle">
+                Deuxième diapositive">
           </div>
           <div class="carousel-item">
-            <img src="assets/image_edu3.jpeg" class="d-block w-100"
-              alt="Troisième diapositive d'image de jeux vidéo pour personnes en fauteuil roulant">
+            <img src="assets/image_edu3.jpeg" class="d-block w-100" alt="Troisième diapositive">
           </div>
         </div>
         <a class="carousel-control-prev" href="#headerSlider" role="button" data-slide="prev">
@@ -104,7 +102,6 @@
         <div class="col" tabindex="0">
           <div id="intro">
             <h1>Introduction</h1>
-
             <span>Lors de la rentrée scolaire 2021, c’est 400 000 enfants en situation de handicap qui ont fait leur
               rentrée dans les établissements scolaires ordinaires du premier et second degré (de la maternelle au
               lycée). En 2019, 37 502 étudiants en situation de handicap ont été recensés, soit 1,69 % de la population
@@ -119,7 +116,6 @@
               <img class="img-responsive" src="assets/cned.png" alt="
             Enfant étudiant à distance à l'aide d'un ordinateur">
             </div>
-
             De nos jours, beaucoup de choses se font sur ordinateur : les inscriptions, l'accès aux cours, aux relevés
             de notes etc, phénomène en grande expansion depuis la crise du COVID-19. Avec les cours à distance, il
             suffit qu’un seul site WEB ou logiciel utilisé ne soit pas accessible pour pénaliser toute la scolarité d’un
