--- a/accessibilite/index.html
+++ b/accessibilite/index.html
@@ -77,14 +77,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/image_edu1.jpeg" class="d-block w-100" alt="First image slide of a handcap using VR">
+            <img src="assets/image_edu1.jpeg" class="d-block w-100" alt="First image slide">
           </div>
           <div class="carousel-item">
-            <img src="assets/image_edu2.jpeg" class="d-block w-100" alt="Second image slide of a kid playing with VR">
+            <img src="assets/image_edu2.jpeg" class="d-block w-100" alt="Second image slide">
           </div>
           <div class="carousel-item">
-            <img src="assets/image_edu3.jpeg" class="d-block w-100"
-              alt="Third image slide of videos games for wheelchaired">
+            <img src="assets/image_edu3.jpeg" class="d-block w-100" alt="Third image slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#headerSlider" role="button" data-slide="prev">
@@ -103,16 +102,28 @@
         <div class="col" tabindex="0">
           <div id="intro">
             <h1>Introduction</h1>
-            <span>During the start of the 2021 school year in France, 400,000 children with disabilities returned to ordinary primary and secondary schools (from kindergarten to high school). In 2019, 37,502 students with disabilities were identified, i.e. 1.69% of the student population. These figures are continuously increasing, an encouraging development for the future. Indeed, it is always complicated for a person with a disability to follow a traditional schooling due to the lack of infrastructure and means helping them to be autonomous. This is why few of them continue their studies after secondary education. In order for everyone to have a chance, it is imperative to do everything possible to make education fully accessible, and this involves a lot of digital technology.
+            <span>During the start of the 2021 school year in France, 400,000 children with disabilities returned to
+              ordinary primary and secondary schools (from kindergarten to high school). In 2019, 37,502 students with
+              disabilities were identified, i.e. 1.69% of the student population. These figures are continuously
+              increasing, an encouraging development for the future. Indeed, it is always complicated for a person with
+              a disability to follow a traditional schooling due to the lack of infrastructure and means helping them to
+              be autonomous. This is why few of them continue their studies after secondary education. In order for
+              everyone to have a chance, it is imperative to do everything possible to make education fully accessible,
+              and this involves a lot of digital technology.
             </span>
             <div id="img">
-              <img class="img-responsive" src="assets/cned.png"
-                alt="Child studying remotely using a computer">
+              <img class="img-responsive" src="assets/cned.png" alt="Child studying remotely using a computer">
             </div>
-            Nowadays, many things are done on the computer: registrations, access to courses, transcripts, etc., a phenomenon that has been expanding rapidly since the COVID-19 crisis. With distance learning courses, it is enough that a single website or software used is not accessible to penalize the entire education of a student with a disability.
-            There are many tools that are already little known to help people with disabilities to use digital tools, but there are also specialized tools in education. Indeed, it can be complicated for a student with a hearing or visual impairment to follow a course like the others. With the advancement in technology, it seems obvious that it can be used so that everyone can take the course without prejudice.
-            <br/>
-            <br/>
+            Nowadays, many things are done on the computer: registrations, access to courses, transcripts, etc., a
+            phenomenon that has been expanding rapidly since the COVID-19 crisis. With distance learning courses, it is
+            enough that a single website or software used is not accessible to penalize the entire education of a
+            student with a disability.
+            There are many tools that are already little known to help people with disabilities to use digital tools,
+            but there are also specialized tools in education. Indeed, it can be complicated for a student with a
+            hearing or visual impairment to follow a course like the others. With the advancement in technology, it
+            seems obvious that it can be used so that everyone can take the course without prejudice.
+            <br />
+            <br />
             <div id="use-case">
               <h1>Video Content</h1>
               <div>Here is a video shot in Narbonne during a somewhat special day: day to raise awareness of high school
